--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
@@ -1,4 +1,32 @@
-﻿.positionRelative {
+﻿.gradientBg{
+    background: linear-gradient(white,#e3ece4,white)
+}
+
+.padding5px {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.hideBorder{
+    border-radius: 10px;
+    border:hidden;
+    float:left;
+}
+.blackFont{
+    color:black;
+}
+
+.buttonSize{
+    width: 192px;
+    height: 50px;
+}
+
+button:hover{
+    color: blue;
+    border:solid;
+    border-color:blue;
+}
+
+.positionRelative {
     position:relative;
 }
 .fontNavigationBar {
