--- a/LivingWater/Assets/js/directives/template1/ui/displayImage/css/displayImage.css
+++ b/LivingWater/Assets/js/directives/template1/ui/displayImage/css/displayImage.css
@@ -1,5 +1,6 @@
 ﻿.displayImageImageTable {
-overflow-y:scroll; display:block; 
+overflow-y:scroll; 
+display:block; 
 height:150px;
 width:1000px;
 }
