--- a/LivingWater/Assets/css/template1/Custom.css
+++ b/LivingWater/Assets/css/template1/Custom.css
@@ -24,11 +24,24 @@
 }
 
 .facebook {
-    background: url('/Assets/resources/FB-fLogo-Blue-broadcast.png') no-repeat
+    background: url('/Assets/images/FB-fLogo-Blue-broadcast.png') no-repeat;
+    background-size: 50px 50px;
+    margin-right: 20px;
 }
 
 .google {
-    background: url('/Assets/resources/FB-fLogo-Blue-broadcast.png') no-repeat
+    background: url('/Assets/images/GPlus-Logo.png') no-repeat;
+    background-size: 50px 50px;
+    margin-left: 20px;
+}
+
+.roundborders{
+    border-radius: 10px;
+}
+
+.socNavBtn-size{
+    width: 50px;
+    height: 50px;
 }
 
 
