--- a/LivingWater/Assets/css/template1/global.css
+++ b/LivingWater/Assets/css/template1/global.css
@@ -2,10 +2,10 @@
     background-image:url('/Assets/images/bg/bg1.jpg');
 }
 .bg2 {
-    background-image:url('/Assets/images/bg/bg2.jpg');
+    background: linear-gradient(#84afea, #3780e5);
 }
-.bg3 {
-   background-image:url('/Assets/images/bg/bg3.jpg');
+.bg3{
+    background-image: url('/Assets/images/bg/sampleImage.jpg');
 }
 .bg4 {
     background-image:url('/Assets/images/bg/bg4.jpg');
@@ -27,4 +27,8 @@
 }
 .mainNav {
     width: 100%;
+}
+
+.facebook{
+
 }
