reverted changes back to normal, do not uncomment or delete the commented parts for future reference

--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
@@ -33,11 +33,8 @@ button:hover{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-@import url("http://bootswatch.com/flatly/bootstrap.min.css");
+/*@import url("http://bootswatch.com/flatly/bootstrap.min.css");
 
-
-
-/* responsive nav stacked liked 3.x */
 @media(max-width:992px) {
     #nav1.navbar .navbar-brand {
         float:none;
@@ -78,4 +75,4 @@ button:hover{
     #nav3.navbar .navbar-nav {
         float:none !important;
     }
-}
+}*/
