--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/css/navigationBar.css
@@ -33,7 +33,7 @@ button:hover{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-/*@import url("http://bootswatch.com/flatly/bootstrap.min.css");
+/*
 
 @media(max-width:992px) {
     #nav1.navbar .navbar-brand {
