--- a/LivingWater/Assets/css/template1/global.css
+++ b/LivingWater/Assets/css/template1/global.css
@@ -1,4 +1,16 @@
-﻿.bg1 {
+﻿.bgvid1 {
+    position: fixed;
+    top:-10%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%)   
+}
+
+.bg1 {
     background-image:url('/Assets/images/bg/bg1.jpg');
 }
 .bg2 {
