--- a/LivingWater/Assets/js/directives/template1/house/contactUs/css/ContactUs.css
+++ b/LivingWater/Assets/js/directives/template1/house/contactUs/css/ContactUs.css
@@ -1,3 +1,8 @@
 ﻿.contactTexts {
     color:white;
 }
+.block {
+	background-color:rgba(0,0,0,0.2);
+  	padding-left:12px;
+  	padding-right:12px;
+}
