--- a/LivingWater/Assets/js/directives/template1/ui/loginComponent/loginComponent.css
+++ b/LivingWater/Assets/js/directives/template1/ui/loginComponent/loginComponent.css
@@ -1,7 +1,13 @@
 ﻿.whiteOpacity{
-    background: rgb(255, 255, 255);
-    background: rgba(255, 255, 255, .2);
-    }
+    background: rgba(0, 0, 0, 0.2);
+}
+.padding10px {
+    padding:50px;
+}
+.borderRadius100px{
+     border-radius:100px;
+}
+
 .noBorders{
     border:none;
     padding-right:5px;
